Fix video width on small (mobile) screens.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,3 +18,8 @@
   width: -webkit-calc(33% - (30px / 2));
   width: calc(33% - (30px / 2));
 }
+
+.main-video {
+  width: -webkit-calc(100% - (110px / 2));
+  width: calc(100% - (110px / 2));
+}
